// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaFootballMatchStats should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hVnRDt"
  >
    <div
      class="sc-htpNat sc-bxivhb iFlvcB"
    />
    <div
      class="sc-bwzfXH eSqyJ"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaFootballMatchStats should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hVnRDt"
  >
    <div
      class="sc-htpNat sc-bxivhb iFlvcB"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
